@@ -545,3 +545,4 @@ readme: hardware problems description
 v71.5
 
 winws: --wf-raw-part
+nfqws: --dpi-desync=hostfakesplit
